--- a/css/css.css
+++ b/css/css.css
@@ -113,17 +113,13 @@ min-height:300px;
 .tagColor8 {
   background: #657b83;
 }
+
 /* la suivante à droite de principale */
 
-#secondaire
-{
-position: relative;
-height: 100%;
-min-height: 300px;
-}
 
 
-#image1{
+
+.image{
 
 min-height:54px;
 min-width:108px;
@@ -134,9 +130,9 @@ width: 100%;
 #image2, #image3, #image4{
 min-height:60px;
 min-width:60px;
-margin:4% 25% 4% 25%;
-height:50%;
-width:50%;
+margin:2% 0% 2% 0%;
+height:60%;
+width:60%;
 }
 
 /*le pied */
@@ -166,6 +162,119 @@ height:7px;
 background: gray;
 }
 
+/* grand */
 
+@media (min-width: 1000px) {
+
+.imagehidden{
+display:none;
+height: 0px;
+width: 0px;
+}
+
+#secondaire
+{
+position: relative;
+height: 100%;
+min-height: 300px;
+}
+
+
+.tagColorBox {
+    display: block;
+}
+
+.tagColorBox {
+	
+    margin-right: 40%;
+    min-width:10px;
+    min-height:10px;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    height: 10%;
+    width: 60%;
+    cursor: pointer;
+}
+
+}
+
+/* Mobile */
+
+@media (max-width: 1000px) {
+
+#image2, #image3, #image4{
+visibility:hidden;
+height:0px;
+width:0px;
+}
+
+.image, .imagehidden{
+width:100%;
+height:100%;
+min-height:80px;
+min-width:60px;
+}
+
+#globale
+{
+ position:relative;
+	 height:auto;
+
+	 border:solid;
+ }
+
+ #principale
+{
+position:relative;
+border:solid;
+height: 10%;
+min-height: 300px;
+}
+
+#secondaire
+{
+position: relative;
+height: 0px;
+width: 0px;
+visibility:hidden;
+}
+
+ #windows
+{
+position:relative;
+border:solid;
+height: 10%;
+min-height: 300px;
+}
+
+
+#filter
+{
+height: 10%;
+min-height: 30px;
+}
+
+.tagColorBox {
+    display: inline-block;
+    margin-left: 1%;
+    margin-right:1%;
+    height: 10%;
+    width: 5%;
+    cursor: pointer;   
+}
+
+#secondaire
+{
+position: relative;
+height: 10%;
+min-height: 300px;
+}
+
+
+#logo
+{
+width: 50%;
+}
+}
 
 
