--- a/css/css.css
+++ b/css/css.css
@@ -218,9 +218,8 @@ min-width:60px;
 #globale
 {
  position:relative;
-	 height:auto;
-
-	 border:solid;
+ height:auto;
+ border:solid;
  }
 
  #principale
@@ -250,16 +249,21 @@ min-height: 300px;
 
 #filter
 {
-height: 10%;
-min-height: 30px;
+height: 20%;
+min-height: 40px;
 }
 
 .tagColorBox {
+    float:right;
     display: inline-block;
     margin-left: 1%;
     margin-right:1%;
-    height: 10%;
-    width: 5%;
+    margin-top: 0.5%;
+    margin-bottom:0.5%;
+    min-height: 20px;
+    min-width: 20px;
+    width:5%;
+    height:5%;
     cursor: pointer;   
 }
 
@@ -274,7 +278,18 @@ min-height: 300px;
 #logo
 {
 width: 50%;
+font-size: 14px;
 }
 }
 
+/* test paysage  ne marche pas*/
+@media (orientation: landscape) and (max-device-width : 640px){
+#logo
+{
+-ms-transform: rotate(90deg); /* IE 9 */
+-webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
+transform: rotate(90deg);
+font-size:12px;
+}
+}
 
