--- a/css/css.css
+++ b/css/css.css
@@ -211,7 +211,7 @@ width:0px;
 .image, .imagehidden{
 width:100%;
 height:100%;
-min-height:80px;
+min-height:350px;
 min-width:60px;
 }
 
@@ -290,6 +290,27 @@ font-size: 14px;
 -webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
 transform: rotate(90deg);
 font-size:12px;
+}
+}
+
+/* autre test non fonctionnel */
+
+@media screen and (max-width: 400px) {
+
+@-webkit-viewport{
+    width: device-width;
+}
+@-moz-viewport{
+    width: device-width;
+}
+@-ms-viewport{
+    width: device-width;
+}
+@-o-viewport{
+    width: device-width;
+}
+@viewport{
+    width: device-width;
 }
 }
 
