--- a/css/css.css
+++ b/css/css.css
@@ -198,7 +198,7 @@ min-height: 300px;
 
 }
 
-/* Mobile */
+/* Mobile 360 * 480 */
 
 @media (max-width: 1000px) {
 
@@ -211,7 +211,7 @@ width:0px;
 .image, .imagehidden{
 width:100%;
 height:100%;
-min-height:350px;
+min-height:435px;
 min-width:60px;
 }
 
@@ -219,6 +219,7 @@ min-width:60px;
 {
  position:relative;
  height:auto;
+ max-height:490px;
  border:solid;
  }
 
@@ -227,6 +228,7 @@ min-width:60px;
 position:relative;
 border:solid;
 height: 10%;
+max-height:485px;
 min-height: 300px;
 }
 
@@ -236,6 +238,7 @@ position: relative;
 height: 0px;
 width: 0px;
 visibility:hidden;
+display:none;
 }
 
  #windows
@@ -243,6 +246,7 @@ visibility:hidden;
 position:relative;
 border:solid;
 height: 10%;
+max-height:440px;
 min-height: 300px;
 }
 
@@ -254,14 +258,14 @@ min-height: 40px;
 }
 
 .tagColorBox {
-    float:right;
+    float:left;
     display: inline-block;
     margin-left: 1%;
     margin-right:1%;
     margin-top: 0.5%;
     margin-bottom:0.5%;
-    min-height: 20px;
-    min-width: 20px;
+    min-height: 19px;
+    min-width: 19px;
     width:5%;
     height:5%;
     cursor: pointer;   
