--- a/css/css.css
+++ b/css/css.css
@@ -2,9 +2,26 @@
   margin:0;
   padding:0;
 }
+
+
+.footer
+{
+position:fixed;
+bottom: 0;
+width: 100%;
+height: 11vh
+}
+
 html,body
 {
-  height:100%;
+height:100vh;
+background-color: rgba(0, 0, 0, 0.2);
+}
+
+
+.container-fluid {
+    padding-right: 0px;
+    padding-left: 0px;
 }
 /**
  concerne le menu puis color by 
@@ -12,6 +29,43 @@ html,body
  */
 
 
+
+.item{
+width:100%;
+}
+
+#main, #second, #third, #fourth{
+border:solid;
+
+}
+
+#infoicone{
+background: url("../image/info48.png");
+background-repeat: no-repeat;
+background-color:white;
+}
+
+#graphicone{
+background-image: url("../image/graph48.png");
+background-repeat: no-repeat;
+background-color:white;
+}
+
+
+#dnaicone
+{
+background-image: url("../image/dna48.jpg");
+background-repeat: no-repeat;
+background-color:white;
+}
+
+
+#gridicone
+{
+background-image: url("../image/grid48.png");
+background-repeat: no-repeat;
+background-color:white;
+}
  
 label
 {
@@ -50,10 +104,8 @@ label:focus {
  
  #globale
  {
-	 position:relative;
-	 height: 80%;
-	 min-height: 300px;
-	 border:solid;
+ position:relative;
+ border:solid;
  }
  
  /**
@@ -65,8 +117,6 @@ label:focus {
 {
 position:relative;
 border:solid;
-height: 100%;
-min-height: 300px;
 }
 
  /* deux sous parties principales la fenêtre suivi de la boite à filtre */
@@ -74,16 +124,22 @@ min-height: 300px;
 {
 position:relative;
 border:solid;
-height: 100%;
-min-height: 300px;
 }
+
+.carousel-indicators {
+bottom: 40px;
+}
+
+#infoicone,#graphicone,#gridicone,#dnaicone{
+height:48px;
+width:48px;
+}
+
 
 #filter
 {
 position:relative;
 border:solid;
-height: 100%;
-min-height:300px;
 }
 
 .tagColor0 {
@@ -121,27 +177,21 @@ min-height:300px;
 
 .image{
 
-min-height:54px;
-min-width:108px;
-height: 100%;
+/*min-height:54px;
+min-width:108px;*/
+/*max-height:590px !important;*/
 width: 100%;
 }
 
-#image2, #image3, #image4{
-min-height:60px;
-min-width:60px;
-margin:2% 0% 2% 0%;
-height:60%;
-width:60%;
-}
 
 /*le pied */
 
 .footer{
 position:fixed;
 bottom: 0;
-width: 100%;
-height: 50px;
+/*width: 100%;
+height: 50px;*/
+background-color:#222;
 }
 
 
@@ -157,104 +207,475 @@ height: 50px;
 #footerbut
 {
 text-align: top;
-width: 100%;
+/*width: 100%;*/
 height:7px;
 background: gray;
 }
 
 /* grand */
 
-@media (min-width: 1000px) {
+/*
+@media (min-width: 1920px) {
 
-.imagehidden{
+#gauche, #droite{
 display:none;
-height: 0px;
-width: 0px;
+visibility:none;
 }
-
-#secondaire
+#scrolle
 {
-position: relative;
-height: 100%;
-min-height: 300px;
-}
-
-
-.tagColorBox {
-    display: block;
-}
-
-.tagColorBox {
-	
-    margin-right: 40%;
-    min-width:10px;
-    min-height:10px;
-    margin-top: 1%;
-    margin-bottom: 1%;
-    height: 10%;
-    width: 60%;
-    cursor: pointer;
-}
-
-}
-
-/* Mobile 360 * 480 */
-
-@media (max-width: 1000px) {
-
-#image2, #image3, #image4{
+display: none;
 visibility:hidden;
-height:0px;
-width:0px;
 }
 
-.image, .imagehidden{
-width:100%;
-height:100%;
-min-height:435px;
-min-width:60px;
-}
-
-#globale
-{
- position:relative;
- height:auto;
- max-height:490px;
- border:solid;
- }
-
- #principale
-{
-position:relative;
-border:solid;
-height: 10%;
-max-height:485px;
-min-height: 300px;
-}
-
-#secondaire
-{
-position: relative;
-height: 0px;
-width: 0px;
-visibility:hidden;
+.carousel-indicators{
 display:none;
+visibility:hidden;
+}
+.image .imagehidden{
+float:left;
 }
 
- #windows
+}
+*/
+/* Mobile/tablette 800 * 1280 */
+
 {
-position:relative;
-border:solid;
-height: 10%;
-max-height:440px;
-min-height: 300px;
+
+}
+
+@media (min-width:768px){
+
+#second, #third, #fourth{
+	float:right;
+	display: block;
+	margin-top:2%;
+	margin-bottom:2%;
+}
+
+#droite
+{
+display:none;
+visibility:hidden;
+}
+
+#gauche
+{
+display:none;
+visibility:hidden;
+}
+
+.carousel-indicators {
+display:none;
+visibility:hidden;
 }
 
 
 #filter
 {
-height: 20%;
-min-height: 40px;
+visibility:hidden;
+display:none;
+}
+
+.footer
+{
+position:fixed;
+bottom: 0;
+width: 100%;
+height: 5vh;
+}
+
+}
+
+
+@media (min-width:768px) and (orientation: portrait){
+
+#filterb
+{
+width:4%;
+height:13vh;
+border:solid;
+bottom: 0;
+position:relative;
+
+}
+
+#second, #third, #fourth{
+	height:auto;
+	width:20vw;
+	margin-left:4vw;
+}
+
+
+.item {
+    height: 68vh !important;
+}
+.image, .imagehidden {
+    height: 68vh !important;
+}
+
+
+#globale {
+    height: 69vh !important;
+}
+
+#principale {
+    height: 69vh !important;
+}
+
+#windows {
+    height: 68vh !important;
+}
+
+
+
+#menunav
+{
+height:6vh !important;
+}
+
+
+.item{
+width:100%;
+}
+
+
+ #windows
+{
+position:relative;
+border:solid;
+
+}
+
+
+.tagColorBox {
+
+    float:left;
+    display: inline-block;
+    margin-left: 3%;
+    margin-right:3%;
+    margin-top: 1%;
+    height: 10%;
+    width: 60%;
+    cursor: pointer;   
+}
+
+
+
+#logo
+{
+width: 50%;
+font-size: 14px;
+}
+
+
+
+
+}
+
+@media (min-width:768px) and (orientation: landscape){
+
+
+#second, #third, #fourth{
+	height:20vh;
+}
+
+#second *{height:10vh;}
+
+
+#filter
+{
+visibility:hidden;
+display:none;
+}
+
+#filterb
+{
+width:90%;
+height:4vh;
+border:solid;
+position: absolute;
+bottom: 0;
+
+}
+
+#scrolle{
+border:solid;
+height: 69vh;
+}
+
+
+.item {
+    height: 68vh !important;
+}
+.image, .imagehidden {
+    height: 68vh !important;
+}
+
+
+#globale {
+    height: 80vh !important;
+    margin-top:1vh;
+}
+
+#principale {
+    height: 69vh !important;
+}
+
+#windows {
+    height: 68vh !important;
+    border:solid;
+}
+
+
+#menunav
+{
+height:6vh !important;
+}
+
+
+.item{
+width:100%;
+}
+
+
+
+
+.tagColorBox {
+    float:left;
+    display: inline-block;
+    margin-left: 1%;
+    margin-right:1.5%;
+    margin-top: 1%;
+    margin-bottom:1%;
+    height: 1.5vh;
+    width: 1.5vh;
+    cursor: pointer;   
+}
+
+
+
+#logo
+{
+width: 50%;
+font-size: 14px;
+}
+
+
+
+}
+
+/* SCROLL VISIBILITY */
+
+@media (max-width: 767px){
+	#filterb
+	{
+	visibility: hidden;
+	display:none;
+	}
+	#scrolle
+	{
+	visibility: hidden;
+	display:none;
+	}
+	#image2, #image3, #image4
+	{
+	visibility:hidden;
+	}
+}
+/****************/
+
+/********************/
+@media (max-width: 767px) and (orientation: portrait){
+
+
+
+#menunav
+{
+height:9vh;
+}
+
+#myCarousel
+{
+height:71vh;
+}
+
+.carousel-inner {
+height:71vh;
+}
+
+.container-fluid {
+    padding-right: 0px;
+    padding-left: 0px;
+}
+.carousel-control {
+width:5%;
+}
+
+
+
+.carousel-indicators {
+bottom: 0px;
+}
+
+ul, ol {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+#globale
+{
+ height:80vh;
+}
+
+ #principale
+{
+position:relative;
+border:solid;
+height:79vh;
+
+}
+
+
+ #windows
+{
+position:relative;
+border:solid;
+height:72vh;
+}
+
+
+
+
+#infoicone,#graphicone,#gridicone,#dnaicone{
+/*max-height:12px;
+max-width:12px;*/
+background-color:white;
+height:4vh;
+width:4vh;
+}
+
+
+.item{
+width:100%;
+height:71vh;
+}
+
+
+.image, .imagehidden{
+height:71vh /*!important;*/
+}
+
+#filter
+{
+    height:6vh;
+}
+
+#filterb
+{
+width:4vw;
+height:90%;
+border:solid;
+position: absolute;
+bottom: 0;
+
+}
+
+.tagColorBox {
+
+    float:left;
+    display:table-cell;
+    margin-left: 1%;
+    margin-right:1%;
+    margin-top: 0.5%;
+    margin-bottom:0.5%;
+    min-height: 10px;
+    max-height: 20px;
+    min-width: 10px;
+    max-width: 20px;
+    /*height: 48%;
+    width: 9%;*/
+    cursor: pointer;   
+}
+
+
+.footer
+{
+position:fixed;
+bottom: 0;
+width: 100%;
+height: 7vh;
+}
+
+}
+
+
+@media (max-width: 768px) and (orientation: landscape){
+
+
+.page-header {
+	padding-bottom: 1vh; 
+    	margin: 40px 0px 0px;
+}
+.carousel-indicators {
+bottom: 0px;
+}
+
+ul, ol {
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+
+.container-fluid {
+    padding-right: 0px;
+    padding-left: 0px;
+}
+
+.carousel-control {
+width:5%;
+}
+
+#globale
+{
+height:78vh;
+}
+
+ #principale
+{
+position:relative;
+border:solid;
+height:77vh;
+}
+
+
+ #windows
+{
+position:relative;
+border:solid;
+height:69vh;
+}
+
+
+#infoicone,#graphicone,#gridicone,#dnaicone{
+height:20px;
+width:20px;
+}
+
+
+.item{
+width:100%;
+height:69vh;
+}
+
+
+.image, .imagehidden{
+width:100%;
+height:67vh !important;
+}
+
+#filter
+{
+    height:6vh;
 }
 
 .tagColorBox {
@@ -264,57 +685,34 @@ min-height: 40px;
     margin-right:1%;
     margin-top: 0.5%;
     margin-bottom:0.5%;
-    min-height: 19px;
-    min-width: 19px;
-    width:5%;
-    height:5%;
+    
+    min-height: 10px;
+    max-height: 20px;
+    min-width: 10px;
+    max-width: 20px;
+   /* height: 48%;
+    width: 9%;*/
     cursor: pointer;   
 }
 
-#secondaire
+
+.footer
 {
-position: relative;
-height: 10%;
-min-height: 300px;
+position:fixed;
+bottom: -3px;
+width: 100%;
+height: 10vh;
 }
 
 
-#logo
-{
-width: 50%;
-font-size: 14px;
+}
+@media (max-width: 350px){
+#logo {
+    width: 40%;
+    font-size: 10px;
 }
 }
 
-/* test paysage  ne marche pas*/
-@media (orientation: landscape) and (max-device-width : 640px){
-#logo
-{
--ms-transform: rotate(90deg); /* IE 9 */
--webkit-transform: rotate(90deg); /* Chrome, Safari, Opera */
-transform: rotate(90deg);
-font-size:12px;
-}
-}
 
-/* autre test non fonctionnel */
 
-@media screen and (max-width: 400px) {
-
-@-webkit-viewport{
-    width: device-width;
-}
-@-moz-viewport{
-    width: device-width;
-}
-@-ms-viewport{
-    width: device-width;
-}
-@-o-viewport{
-    width: device-width;
-}
-@viewport{
-    width: device-width;
-}
-}
 
